# esm-lecture-ws21-team-1

./: .gitattributes  .gitignore  README.md
group-task/presentation/: index.md
group-task/solution/: pyproject.toml  run.py
group-task/solution/data/: NO2_2010.xlsx  NO2_2011.xlsx  NO2_2012.xlsx  NO2_2013.xlsx  NO2_2016.xlsx  NO2_2019.xlsx  NO2_2021_01.xlsx  NO2_2021_02.xlsx  NO2_2021_04.xlsx  NO2_2021_08.xlsx  NO2_2021_11.xlsx  NO2_2022_01.xlsx  NO2_2022_02.xlsx  NO2_2022_03.xlsx
implementation/: merge.py  merge_dwd.py  merge_luf.py  plot.py  pyproject.toml  render_gifs.sh
implementation/data/: DWD_merged.csv  LUF_merged.csv  NO2_2015.xlsx  NO2_2017.xlsx  NO2_2018.xlsx  NO2_2021_03.xlsx  NO2_2021_05.xlsx  NO2_2021_07.xlsx  NO2_2021_09.xlsx  NO2_2021_12.xlsx
implementation/data/raw/: NO2_2014.xlsx  NO2_2020.xlsx  NO2_2021_06.xlsx  NO2_2021_10.xlsx  dwd_klima_flughafen.txt
marp-presentation/: index.html  index.md
presentation/: index.md  package.json  render_gifs.sh  slides.md
presentation/theme/components/: Pagination.vue
presentation/theme/layouts/: cover.vue  default.vue  two-cols.vue
presentation/theme/styles/: index.ts
slidev-presentation/: package.json  slides.md
slidev-presentation/theme/styles/: layouts.css
