[tool.poetry]
name = "esm-lecture-team-1"
version = "0.1.0"
description = ""
authors = ["dostuffthatmatters <moritz@dostuffthatmatters.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
openpyxl = "^3.0.9"
numpy = "^1.22.3"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
